# expense-tracker-odoo

./: README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  entrypoint.sh  expenses.db  pyproject.toml  requirements.txt
backend/backend/: README.md
backend/backend/app/: db.py  deps.py  main.py  models.py
backend/backend/app/routers/: admin.py  approvals.py  auth.py  expenses.py  ocr.py
backend/backend/app/services/: currency.py
backend/scripts/: init_db.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/api/: client.js
frontend/src/components/: AppShell.jsx
frontend/src/pages/: AdminSettings.jsx  ApprovalsQueue.jsx  Dashboard.jsx  History.jsx  Login.jsx  SubmitExpense.jsx
